@@ -1,3 +1,7 @@
+2009-02-23  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Main.cs: set CustomSearchPath correctly
+
 2009-02-16  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Main.cs: use generic type methods
